<?xml version="1.0" encoding="utf-8"?>
<LinearLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_weight="2"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/enter_a_message"

    />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:text="@string/send"
            android:textStyle="bold"
            android:onClick="onSendButtonClicked"/>
        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:onClick="onShareButtonClicked"
            android:text="@string/share"
            android:textStyle="bold" />
    </LinearLayout>

    <EditText
        android:id="@+id/searchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/search"

        />
    <Button
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_margin="8dp"
        android:onClick="showMap"
        android:text="@string/searchBtn"
        android:textStyle="bold" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="1"
        >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="100dp"
            android:background="@color/gray"
            android:layout_gravity="center_horizontal"

            />
        <Button
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:onClick="openCam"
            android:text="@string/take_picture"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"/>
    </LinearLayout>

</LinearLayout>